# ToasterBot

./: Cargo.toml  README.md
src/: main.rs
src/commands/: mod.rs  toast.rs
